--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~8.0.0",
     "@swimlane/ngx-charts": "^13.0.1",
     "bootstrap": "^4.4.1",
-    "highcharts": "^8.0.0",
-    "highcharts-angular": "^2.4.0",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-streaming": "^1.8.0",
+    "class-transformer": "^0.2.3",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
