--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-streaming": "^1.8.0",
-    "class-transformer": "^0.2.3",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "typedjson": "^1.5.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
