--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             ],
             "scripts": [
 
-            ]
+            ],
+            "aot": true
           },
           "configurations": {
             "production": {
@@ -39,8 +40,6 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -51,6 +50,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
