--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/styles.css"
             ],
             "scripts": [
-
+              "./node_modules/hammerjs/hammer.min.js"
             ],
             "aot": true
           },
@@ -90,7 +90,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/javascript/pieChart.js",
+              "./node_modules/hammerjs/hammer.min.js"
+            ]
           }
         },
         "lint": {
@@ -119,6 +122,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "lol-stats-app"
 }
