--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.9",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
@@ -19,15 +20,19 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
-    "@swimlane/ngx-charts": "^13.0.1",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "chartjs-plugin-streaming": "^1.8.0",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^9.0.1",
     "json2typescript": "^1.4.1",
-    "ng2-charts": "^2.3.0",
+    "jszip": "^3.5.0",
+    "ng2-charts": "^2.4.2",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "typedjson": "^1.5.1",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
     "@angular/language-service": "~11.0.9",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
