--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-streaming": "^1.8.0",
+    "highcharts": "^9.0.1",
     "json2typescript": "^1.4.1",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.6.3",
